--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+ <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<!--
 
-Template 2091 Ziggy
-
-http://www.tooplate.com/view/2091-ziggy
-
--->
         <title>KENSO SYSTEMS (E.A) LIMITED</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,7 +28,7 @@ http://www.tooplate.com/view/2091-ziggy
                 <div class="text-content">
                   <h2>Welcome to kensho systems (E.A) limited</h2>
                   <div class="line-dec"></div>
-                  <span>We are your solution to green pumping solutions.</span>
+                  <span>We are your solution to green pumping.</span>
                 </div>
               </div>
             </div>
@@ -47,43 +38,34 @@ http://www.tooplate.com/view/2091-ziggy
         <section class="second-section">
           <div class="container">
             <div class="row">
-              <div class="col-md-3 col-sm-6">
+              <div class="col-md-3 col-sm-3">
                 <div class="service-item">
                   <div class="icon">
                     <img src="img/first-icon.png" alt="">
                   </div>
-                  <h4>Quick Editing</h4>
-                  <p>Aliquam ex velit, viverra eu tristique vel, rhoncus nec ligula. In vel massa sed dolor pharetra interdum vitae posuere.</p>
+                  <h4>Services</h4>
+                  <p>Send an email so as to service your pumps if it's within the warrant period.</p>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-6">
+              <div class="col-md-3 col-sm-3">
                 <div class="service-item">
                   <div class="icon">
                     <img src="img/second-icon.png" alt="">
                   </div>
-                  <h4>Responsive Layout</h4>
-                  <p>Sed pulvinar ipsum id leo volutpat, in convallis lectus molestie. Aliquam nisi sapien, faucibus eu consequat id, egestas vitae augue.</p>
+                  <h4>Orders</h4>
+                  <p>Place your orders conviniently from anywhere.</p>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-6">
+              <div class="col-md-3 col-sm-3">
                 <div class="service-item">
                   <div class="icon">
                     <img src="img/third-icon.png" alt="">
                   </div>
                   <h4>Quick Support</h4>
-                  <p>Aliquam ex velit, viverra eu tristique vel, rhoncus nec ligula. In vel massa sed dolor pharetra interdum vitae posuere.</p>
+                  <p>Call us at anytime within the busiined hours for your support.</p>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-6">
-                <div class="service-item">
-                  <div class="icon">
-                    <img src="img/fourth-icon.png" alt="">
-                  </div>
-                  <h4>Voice Chat</h4>
-                  <p>Sed pulvinar ipsum id leo volutpat, in convallis lectus molestie. Aliquam nisi sapien, faucibus eu consequat id, egestas vitae augue.</p>
-                </div>
-              </div>
-            </div>
+             </div>
           </div>
         </section>
 
@@ -95,8 +77,8 @@ http://www.tooplate.com/view/2091-ziggy
                   <img src="img/left-image.png" alt="">
                 </div>
                 <div class="right-text col-md-8">
-                  <h4><em>Integer suscipit</em><br>Nullam volutpat mi vel</h4>
-                  <p>Nulla tempor lectus at mauris bibendum porttitor. Aenean ultrices orci id nibh sodales, vel suscipit arcu vulputate. Pellentesque hendrerit diam quis leo dignissim, lacinia interdum nunc volutpat. Morbi lobortis mattis lectus, a dictum augue lobortis non. Fusce eu nulla sagittis, scelerisque eros fringilla, commodo dolor.</p>
+                  <h4><em>About us</em><br>What we do</h4>
+                  <p>We are suppliers and installers of quality solar pumps and panels from indial and we deal with Shakti pumps that offer a wide range of pumps in Agricultural sector, home use and for commercial purposes. </p>
                 </div>
               </div>
             </div>
@@ -109,33 +91,33 @@ http://www.tooplate.com/view/2091-ziggy
               <div class="col-md-3 col-sm-6">
                 <div class="portfolio-item first-item">
                   <div class="image">
-                    <a href="img/01-big-item.jpg" data-lightbox="image-1"><img src="img/first-item.jpg"></a>
+                    <a href="img/KUSPC.jpeg" data-lightbox="image-1"><img src="img/KUSPC.jpeg"></a>
                   </div>
                   <div class="text">
-                    <span>Nature</span>
-                    <h4>Robotic Light</h4>
+                    <span>Soft Starters</span>
+                    <h4>Components</h4>
                   </div>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
                 <div class="portfolio-item second-item">
                   <div class="image">
-                    <a href="img/02-big-item.jpg" data-lightbox="image-1"><img src="img/second-item.jpg"></a>
+                    <a href="img/helical_pump_.jpg" data-lightbox="image-1"><img src="img/helical_pump_.jpg"></a>
                   </div>
                   <div class="text">
-                    <span>Architect</span>
-                    <h4>Rock Solid</h4>
+                    <span>Pumps</span>
+                    <h4>Impeller Pumps</h4>
                   </div>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
                 <div class="portfolio-item third-item">
                   <div class="image">
-                    <a href="img/03-big-item.jpg" data-lightbox="image-1"><img src="img/third-item.jpg"></a>
+                    <a href="img/threephase_shakti_starter.png" data-lightbox="image-1"><img src="img/threephase_shakti_starter.png"></a>
                   </div>
                   <div class="text">
-                    <span>Focus</span>
-                    <h4>Clean Design</h4>
+                    <span>Inverters</span>
+                    <h4>Three-phase Inverter</h4>
                   </div>
                 </div>
               </div>
@@ -143,24 +125,8 @@ http://www.tooplate.com/view/2091-ziggy
                 <div class="send-to-portfolio">
                   <span>Do you want to see more?</span>
                   <div class="primary-button">
-                    <a href="portfolio-page.html">Visit gallery</a>
+                    <a href="portfolio-page.html">Visit catalogue</a>
                   </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="fivth-section">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-10 col-md-offset-1"> 
-                <div class="left-text col-md-8">
-                  <h4><em>Aliquam efficitur</em><br>augue et libero vulputate feugiat</h4>
-                  <p>Mauris eget orci porta, aliquam neque sit amet, porttitor dui. Donec efficitur vehicula justo quis varius. Vivamus pharetra lorem eget turpis ornare tempus. Vivamus ac sodales lectus. Morbi rhoncus feugiat neque ultrices rhoncus. Maecenas ultrices, nisl pellentesque hendrerit dignissim, ante purus hendrerit urna, eu tristique est massa quis risus.</p>
-                </div>
-                <div class="right-image col-md-4">
-                  <img src="img/right-image.png" alt="">
                 </div>
               </div>
             </div>
@@ -200,7 +166,7 @@ http://www.tooplate.com/view/2091-ziggy
                 <div class="right-info">
                   <ul>
                     <li><a href="#"><i class="fa fa-envelope"></i>kensho.kenya@gmail.com</a></li>
-                    <li><a href="#"><i class="fa fa-phone"></i>+254725537686/ +25422215533</a></li>
+                    <li><a href="#"><i class="fa fa-phone"></i>+254 725 537 686/ +254 722 215 533</a></li>
                     <li><a href="#"><i class="fa fa-map-marker"></i>Mmid studio, Westlands road</a></li>
                   </ul>
                 </div>
@@ -215,12 +181,12 @@ http://www.tooplate.com/view/2091-ziggy
               <div class="col-md-12">
                 <ul>
                   <li><a href="https://www.facebook.com/tooplate"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="https://twitter.com/KenshoPumps" target="blank"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.instagram.com/kensho_systems_kenya/" target="blank"><i class="fa fa-instagram"></i></a></li>
                   <li><a href="#"><i class="fa fa-rss"></i></a></li>
                   <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                 </ul>
-                <p>Copyright &copy; 2020 KENSHO SYSTEMS (E.A) LIMITED 
+                <p>Copyright &copy; 2021 KENSHO SYSTEMS (E.A) LIMITED 
                         
                         <a href="https://www.facebook.com/tooplate" target="_parent"></p>
               </div>
