--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="send-to-portfolio">
                   <span>Do you want to see more?</span>
                   <div class="primary-button">
-                    <a href="portfolio-page.html">Visit catalogue</a>
+                    <a href="portfolio-page.html" target="blank">Visit catalogue</a>
                   </div>
                 </div>
               </div>
@@ -186,9 +186,8 @@
                   <li><a href="#"><i class="fa fa-rss"></i></a></li>
                   <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                 </ul>
-                <p>Copyright &copy; 2021 KENSHO SYSTEMS (E.A) LIMITED 
-                        
-                        <a href="https://www.facebook.com/tooplate" target="_parent"></p>
+                <p>Copyright &copy;  KENSHO SYSTEMS (E.A) LIMITED 2021
+                          
               </div>
             </div>
           </div>
