--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -1,18 +1,8 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+ <html class="no-js" lang=""> 
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<!--
-
-Template 2091 Ziggy
-
-http://www.tooplate.com/view/2091-ziggy
-
--->
         <title>Gallery</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +25,7 @@ http://www.tooplate.com/view/2091-ziggy
             <div class="row">
               <div class="col-md-12">
                 <div class="text-content">
-                  <h2>Gallery</h2>
+                  <h2>catalogue</h2>
                   <div class="line-dec"></div>
                   <span></span>
                 </div>
@@ -77,74 +67,74 @@ http://www.tooplate.com/view/2091-ziggy
                         <div class="row">
                             <div class="col-md-3 col-sm-6 project-item mix nature">
                               <div class="image">
-                                <a href="img/01-big-item.jpg" data-lightbox="image-1"><img src="img/01-item.jpg"></a>
+                                <a href="img/Hybrid_invert.jpeg" data-lightbox="image-1"><img src="img/Hybrid_invert.jpeg"></a>
                               </div>
                               <div class="text">
                                 <span>Inverter</span>
-                                <h4>Robotic Light</h4>
+                                <h4>Inverter</h4>
                               </div>
                             </div>
                             <div class="col-md-3 col-sm-6 project-item mix webdesign">
                               <div class="image">
-                                <a href="img/02-big-item.jpg" data-lightbox="image-1"><img src="img/02-item.jpg"></a>
+                                <a href="img/submersible-motor-product.png" data-lightbox="image-1"><img src="img/submersible-motor-product.png"></a>
                               </div>
                               <div class="text">
                                 <span>Motors</span>
-                                <h4>Rock Solid</h4>
+                                <h4>50Hz Motors</h4>
                               </div>
                             </div>
                             <div class="col-md-3 col-sm-6 project-item mix responsive">
                               <div class="image">
-                                <a href="img/03-big-item.jpg" data-lightbox="image-1"><img src="img/03-item.jpg"></a>
+                                <a href="img/DU_DT.jpeg" data-lightbox="image-1"><img src="img/DU_DT.jpeg"></a>
                               </div>
                               <div class="text">
                                 <span>Choke</span>
-                                <h4>Minimal Capture</h4>
+                                <h4>Choke filter</h4>
                               </div>
                             </div>
                             <div class="col-md-3 col-sm-6 project-item mix creative nature">
                               <div class="image">
-                                <a href="img/04-big-item.jpg" data-lightbox="image-1"><img src="img/04-item.jpg"></a>
+                                <a href="img/threephase_shakti_starter.png" data-lightbox="image-1"><img src="img/threephase_shakti_starter.png"></a>
                               </div>
                               <div class="text">
                                 <span>Inverter</span>
-                                <h4>Tattoo Lovers</h4>
+                                <h4>Three-phase</h4>
                               </div>
                             </div>
                             <div class="col-md-3 col-sm-6 project-item mix creative">
                               <div class="image">
-                                <a href="img/05-big-item.jpg" data-lightbox="image-1"><img src="img/05-item.jpg"></a>
+                                <a href="img/submersible pumps.jpeg" data-lightbox="image-1"><img src="img/submersible pumps.jpeg"></a>
                               </div>
                               <div class="text">
                                 <span>Pump</span>
-                                <h4>Develope &amp; Coding</h4>
+                                <h4>Submersible pump</h4>
                               </div>
                             </div>
                             <div class="col-md-3 col-sm-6 project-item mix responsive webdesign">
                               <div class="image">
-                                <a href="img/06-big-item.jpg" data-lightbox="image-1"><img src="img/06-item.jpg"></a>
+                                <a href="img/Horizontal_split.jpg" data-lightbox="image-1"><img src="img/Horizontal_split.jpg"></a>
                               </div>
                               <div class="text">
-                                <span>Choke</span>
-                                <h4>Network Inspire</h4>
+                                <span>pumps</span>
+                                <h4>Horizontal split</h4>
                               </div>
                             </div>
                             <div class="col-md-3 col-sm-6 project-item mix webdesign">
                               <div class="image">
-                                <a href="img/07-big-item.jpg" data-lightbox="image-1"><img src="img/07-item.jpg"></a>
+                                <a href="img/all_product_leaflet_.jpg" data-lightbox="image-1"><img src="img/all_product_leaflet_.jpg"></a>
                               </div>
                               <div class="text">
-                                <span>Motors</span>
-                                <h4>Start From Scatch</h4>
+                                <span>All</span>
+                                <h4>Product image</h4>
                               </div>
                             </div>
                             <div class="col-md-3 col-sm-6 project-item mix nature">
                               <div class="image">
-                                <a href="img/08-big-item.jpg" data-lightbox="image-1"><img src="img/08-item.jpg"></a>
+                                <a href="img/Kalpavriksh_cnt.jpeg" data-lightbox="image-1"><img src="img/Kalpavriksh_cnt.jpeg"></a>
                               </div>
                               <div class="text">
-                                <span>Inverter</span>
-                                <h4>Stay Safe Watch</h4>
+                                <span>Starters</span>
+                                <h4>Drives</h4>
                               </div>
                             </div>
                         </div>
@@ -159,14 +149,13 @@ http://www.tooplate.com/view/2091-ziggy
               <div class="col-md-12">
                 <ul>
                   <li><a href="https://www.facebook.com/tooplate"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="https://twitter.com/KenshoPumps"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.instagram.com/kensho_systems_kenya/"><i class="fa fa-instagram"></i></a></li>
                   <li><a href="#"><i class="fa fa-rss"></i></a></li>
                   <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                 </ul>
-                <p>Copyright &copy;<br><br> 2020 KENSHO SYSTEMS (E.A) LIMITED </p>
-                        
-                        | Design: <a href="https://www.facebook.com/tooplate" target="_parent">Tooplate</a></p>
+                <p>Copyright &copy;<br><br>  KENSHO SYSTEMS (E.A) LIMITED 2021 </p>
+                      
               </div>
             </div>
           </div>
