--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="css/tooplate-style.css">
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2993b05bc9c03786c964bd17e/a8f8d954c2b3d4dce46e430e5.js");</script>
     </head>
     <body>
         
