--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
                   <p>Call us at anytime within the busiined hours for your support.</p>
                 </div>
               </div>
+              <div class="col-sm-3 col-sm-3">
+                <div class="service-item">
+                  <div class="icon">
+                    <img src="img/fourth-icon.png" alt="">
+                  </div>
+                  <h4>Check pump size</h4>
+                  <p>You can use <a href="https://www.shaktipumps.com/solar_calculator/"> solar calculator</a> and <a href="https://www.shaktipumps.com/solar_dashboard/">pump selection </a> to  have a rough idea on the pump you wish to have. </p>
+                </div>
+              </div>
              </div>
           </div>
         </section>
