--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -70,7 +70,7 @@
                                 <a href="img/Hybrid_invert.jpeg" data-lightbox="image-1"><img src="img/Hybrid_invert.jpeg"></a>
                               </div>
                               <div class="text">
-                                <span>Inverter</span>
+                                <span><a href="docs/A1_Smart_Starter1Phase_User_Manual_L2_25Nov2019.pdf" target="blank">Inverter</a></span>
                                 <h4>Inverter</h4>
                               </div>
                             </div>
