--- a/index.html
+++ b/index.html
@@ -20,9 +20,23 @@
         <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2993b05bc9c03786c964bd17e/a8f8d954c2b3d4dce46e430e5.js");</script>
     </head>
     <body>
-        
+        <nav>
+          <header>
+            <div class="topnav">
+              <a class="active" href="#first-section">home</a>
+                <a class="active" href="#second-section">info</a>
+                <a class="active" href="#third-section">about us</a>
+                <a class="active" href="#fourth-section">Catalogue</a>
+                <a href="active" href="#sixth-section">suggestion</a>
+                <a href="active" href="#footer">social</a>
+                <div class="search-container">
+                <input type="text" placeholder="search....">
+                </div>
+            </div>
+          </header>
+        </nav>
 
-        <section class="first-section">
+        <section class="first-section" id="first-section>"
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -36,7 +50,7 @@
           </div>
         </section>
 
-        <section class="second-section">
+        <section class="second-section" id="second-section">
           <div class="container">
             <div class="row">
               <div class="col-md-3 col-sm-3">
@@ -79,7 +93,7 @@
           </div>
         </section>
 
-        <section class="third-section">
+        <section class="third-section" id="third-section">
           <div class="container">
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
@@ -95,7 +109,7 @@
           </div>
         </section>
 
-        <section class="fourth-section">
+        <section class="fourth-section" id="fourth-section">
           <div class="container">
             <div class="row">
               <div class="col-md-3 col-sm-6">
@@ -143,7 +157,7 @@
           </div>
         </section>
 
-        <section class="sixth-section">
+        <section class="sixth-section" id="sixth-section">
           <div class="container">
             <div class="row">
               <div class="col-md-6">
@@ -186,14 +200,14 @@
         </section>
 
         <footer>
-          <div class="container">
+          <div class="container" id="footer">
             <div class="row">
               <div class="col-md-12">
                 <ul>
                   <li><a href="https://twitter.com/KenshoPumps" target="blank"><i class="fa fa-twitter"></i></a></li>
                   <li><a href="https://www.instagram.com/kensho_systems_kenya/" target="blank"><i class="fa fa-instagram"></i></a></li>
                 </ul>
-                <p>Copyright &copy;  KENSHO SYSTEMS (E.A) LIMITED 2021
+                <p>Copyright &copy; <br><br> KENSHO SYSTEMS (E.A) LIMITED 2021
                           
               </div>
             </div>
